# DrivyX-Autonomous-Car-Training-Platform-DACTP-

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: ctrl_waypoint.yaml  paths.yaml  seg_pidnet_s.yaml
docs/: DECISIONS.md  PROGRESS.md
scripts/: setup_orin.sh  stage_data.sh
src/drivyx/: __init__.py  branding.py  cli.py  env_report.py  logging_setup.py  paths.py  torch_setup.py
src/drivyx/data/: __init__.py  lut.py  masks.py  mm_inventory.py  mm_label.py  mm_sync.py  seg_dataset.py  shards.py  verify.py  waypoints.py
src/drivyx/eval/: __init__.py  ctrl_eval.py  seg_eval.py  viz.py
src/drivyx/export/: __init__.py  onnx_export.py  parity.py  trt_build.py
src/drivyx/gui/: __init__.py  app.py  monitor.py  process.py
src/drivyx/gui/theme/: __init__.py  blender.qss  tokens.py
src/drivyx/gui/widgets/: __init__.py  fieldmaptable.py  jobcard.py  logconsole.py  panel.py  statrow.py
src/drivyx/gui/workspaces/: __init__.py  base.py  data.py  eval.py  export.py  label.py  system.py  train.py
src/drivyx/jobs/: __init__.py  events.py  run_dir.py
src/drivyx/models/: __init__.py  ctrlnet.py  losses.py  pidnet.py
src/drivyx/train/: __init__.py  config.py  ctrl_trainer.py  probe.py  seg_trainer.py
tests/: test_cli_smoke.py  test_ctrlnet.py  test_env_report.py  test_events.py  test_export.py  test_gui_contracts.py  test_lut.py  test_mm_sync.py  test_models.py  test_monitor_parse.py  test_paths.py  test_shards.py  test_theme.py  test_verify.py  test_waypoints.py
